# ZebraFetch

./: .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  cursor_metrics.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: appflow.mdc  backendstructure.mdc  frontendguideline.mdc  prd.mdc  projectrules.mdc  securityguideline.mdc  techstack.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  config.yaml  config.yaml.example  jobs.db  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  db.py  exceptions.py  main.py
backend/app/dependencies/: auth.py
backend/app/routes/: jobs.py  scan.py
backend/app/services/: scanner.py
backend/schemas/: jobs.sql
tests/: conftest.py  test_scanner.py
